feat(thesis): daily update

--- a/content/audio_over_ip_systems.tex
+++ b/content/audio_over_ip_systems.tex
@@ -721,9 +721,7 @@ fent felsorolt minimális követelmények között.
 \subsection{A cégről \cite{AUDINATEHISTORY}} %https://www.audinate.com/company/history
 %----------------------------------------------------------------------------
 Az Audinate a professzionális AV hálózati technológiák vezető globális szolgáltatója, 
-amely AV és IT rendszerek konvergenciájában játszik kulcsszerepet Dante platformjával. 
-A Dante rendszer digitális audio- és videójelek számítógépes hálózaton történő 
-elosztását biztosítja, lehetővé téve a kiváló minőségű és rugalmas megoldásokat.
+az AV és IT rendszerek konvergenciájában játszik kulcsszerepet Dante platformjával. 
 
 Az Audinate gyökerei Sydney-ben találhatók, ahol egy kis mérnökcsapat a Motorola 
 Kutatólaboratóriumában fejlesztett új technológiákat. A Motorola 2003-ban bezárta 
