--- a/content/further_development.tex
+++ b/content/further_development.tex
@@ -15,6 +15,16 @@ Minden komponens megfelelően végezte a rá bízott feladatot, és a rendszer
 stabilan kihagyás nélkül működött a teljes üzemidő alatt. 
 
 
+
+% Plusz ötletek:
+% mitől  a legjobb a dante, mire képes a szoftver, milyen  limitációk vannak benne, milyen fejlesztési irányelveket fogalmaznál meg, 
+
+% miben könnyíti meg a munkád?
+
+ 
+ 
+
+
 %----------------------------------------------------------------------------
 \section{Továbbfejlesztési lehetőségek}
 %----------------------------------------------------------------------------
