--- a/include/variables.tex
+++ b/include/variables.tex
@@ -111,7 +111,7 @@
 }
 \newcommand{\SystemDesign}{%
     \en{System design and deployment in live environment}%
-    \hu{Rendszertervezés és telepítés elő környezetben}%
+    \hu{Rendszertervezés és telepítés élő környezetben}%
 }
 \newcommand{\FurtherDevelopment}{%
     \en{Operational experience and further development opportunities}%
