feat(thesis): daily update

--- a/bib/mybib.bib
+++ b/bib/mybib.bib
@@ -82,39 +82,46 @@
   note   = {Accessed on: 2024.01.04.}
 }
 
-@online{MERLINVANVEEN,
+@misc{MERLINVANVEEN,
   author = {Merlijn van Veen},
   title = {Calculators},
   url = {https://www.merlijnvanveen.nl/en/calculators},
   note = {Accessed on: 2024.01.08.}
 }
 
-@online{MARTINSUBCALCULATOR,
+@misc{MARTINSUBCALCULATOR,
   author = {Martin Audio},
   title = {Subwoofer Calculator},
   url = {https://martin-audio.com/support/subwoofer-calculator},
   note = {Accessed on: 2024.01.08.}}
 }
 
-@online{AHSQ,
+@misc{AHSQ,
   author = {Allen \& Heath},
   title = {SQ Series},
   url = {https://www.allen-heath.com/hardware/sq},
   note = {Accessed on: 2024.01.08.}}
 }
 
-@online{APPLICATIONDIAGRAMSFORDANTESYSTEMS,
+@misc{APPLICATIONDIAGRAMSFORDANTESYSTEMS,
   author = {Audinate},
   title = {Application Diagrams for Dante Systems},
   url = {https://my.audinate.com/sites/default/files/Live_Performance_Touring_Venue_Audio_System_Diagrams_Dante.pdf},
   note = {Accessed on: 2024.02.25.}
 }
 
-@online{AUDINATEHISTORY,
+@misc{AUDINATEHISTORY,
   author = {Audinate},
   title = {Audinate History},
   url = {https://www.audinate.com/company/history},
   note = {Accessed on: 2024.09.11.}
+}
+
+@misc {PULSECODEMODULATION,
+  author = {Shah Nurun Nabi},
+  title = {Pulse Code Modulation (PCM)},
+  url = {https://www.youtube.com/watch?app=desktop&v=k7L52z-IQmQ},
+  note = {Accessed on: 2024.09.16.}
 }
 
 ----------------------------------------------------------------------------
