--- a/thesis.tex
+++ b/thesis.tex
@@ -11,6 +11,7 @@
 \usepackage{hyperref}
 \usepackage{url}
 \usepackage{graphicx}
+\usepackage{comment}
 %--------------------------------------------------------------------------------------
 \newcommand{\szerzoVezeteknev}{Székely}
 \newcommand{\szerzoKeresztnev}{Dániel}
@@ -79,7 +80,7 @@ tervezése, építése, optimalizálása, beüzemelése} % Cím
 
 % Saját munka
 \include{content/introduction}
-%\include{content/audio_basics}
+\include{content/audio_basics}
 \include{content/audio_over_ip_systems}
 \include{content/system_desing}
 \include{content/further_development}
