feat(thesis): daily update

--- a/bib/mybib.bib
+++ b/bib/mybib.bib
@@ -124,6 +124,13 @@
   note = {Accessed on: 2024.09.16.}
 }
 
+@misc {DECIBELSCALE,
+  author = {Vadalarm},
+  title = {Decibel Scale},
+  url = {https://www.vadalarm.hu/img/blog/decibel-ertek.jpg},
+  note = {Accessed on: 2024.09.16.}
+}
+
 ----------------------------------------------------------------------------
 https://broadmax.hu/wp-content/uploads/2016/10/three-pillars-audio-networking-whitepaper-audinate.pdf
 https://broadmax.hu/wp-content/uploads/2016/10/rise-of-audio-networking-audinate-wp.pdf
