--- a/content/audio_over_ip_systems.tex
+++ b/content/audio_over_ip_systems.tex
@@ -197,14 +197,14 @@ Szerencsére ez a koncepció elterjedt és jelenleg minden audiohálózati szabv
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=\linewidth, keepaspectratio]{figures/link_offset_latency.png}
-	\caption{A kapcsolati eltolás meghatározza a késleltetést \cite{AHNERT2023}}
+	\caption{A kapcsolati eltolás meghatározza a késleltetést~\cite{AHNERT2023}}
 	\label {fig:link_offset_latency}
 \end{figure}
 %----------------------------------------------------------------------------
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=\linewidth, keepaspectratio]{figures/phase_coherence_link_offset.png}
-	\caption{Fáziskoherencia azonos kapcsolati eltolással \cite{AHNERT2023}}
+	\caption{Fáziskoherencia azonos kapcsolati eltolással~\cite{AHNERT2023}}
 	\label {fig:phase_coherence_link_offset}
 \end{figure}
 %----------------------------------------------------------------------------
@@ -696,7 +696,7 @@ fent felsorolt minimális követelmények között.
 %----------------------------------------------------------------------------
 \section{Audinate Dante}
 %----------------------------------------------------------------------------
-\subsection{A cégről \cite{AUDINATEHISTORY}} %https://www.audinate.com/company/history
+\subsection{A cégről~\cite{AUDINATEHISTORY}} %https://www.audinate.com/company/history
 %----------------------------------------------------------------------------
 Az Audinate a professzionális AV hálózati technológiák vezető globális szolgáltatója, 
 az AV és IT rendszerek konvergenciájában játszik kulcsszerepet Dante platformjával. 
