feat(thesis): daily update

--- a/content/audio_basics.tex
+++ b/content/audio_basics.tex
@@ -229,6 +229,22 @@ kétszer olyan hangos, mint az 50 dB; a hangerő érzékelése szubjektív, és 
 hangosnak érzékelhető, így a 60 dB-es hangerő kétszer hangosabbnak tűnik, mint az 50 dB-es.
 A decibelskála logaritmikus alapú, így a decibelben megadott értékek nem lineárisan arányosak. 
 Például 120 dB nem kétszer olyan hangos, mint 60 dB, hanem annak hangnyomása körülbelül 1000-szer nagyobb. 
+Különböző súlyozással mérhetjük a hangnyomást, például A, C, és Z súlyozással, na de mit is jelent ez?
+Amennyiben egy hang az egész frekvenciatartományban egyenlő hangnyomással rendelkezik, 
+akkor ezt a Z-súlyozási görbével lehet ábrázolni. Az emberi fül által észlelt hangokat 
+az A-súlyozási görbe képviseli. Mivel az akusztikus hang tartalmaz alacsonyabb és 
+magasabb frekvenciákat is, mint amit az emberi fül képes érzékelni, az A-súlyozás 
+pontosan tükrözi az emberi hallás frekvenciaválaszát. A C-súlyozás pedig azt a 
+hangélményt reprezentálja, amelyet akkor tapasztalunk, amikor a hang intenzitása 
+megnő, ilyenkor érzékenyebbé válunk az alacsonyabb frekvenciákra. Az A- és 
+C-súlyozás tehát a legalkalmasabb az emberi fül számára valódi világ hangjainak 
+frekvenciaválaszának leírására.
+%----------------------------------------------------------------------------
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=\linewidth, keepaspectratio]{figures/db_weights.jpg}
+    \caption{A-, C- és Z-súlyozás~\cite{DBWEIGHTS}}\label{fig:db_weights}
+\end{figure}
 %----------------------------------------------------------------------------
 \section{Pontsugárzó hangforrás}
 %----------------------------------------------------------------------------
