--- a/bib/mybib.bib
+++ b/bib/mybib.bib
@@ -131,6 +131,14 @@
   note = {Accessed on: 2024.09.16.}
 }
 
+@misc {DBWEIGHTS,
+  author = {NTI Audio},
+  title = {dB Weights},
+  url = {https://www.nti-audio.com/Portals/0/pic/en/Sound-Pressure-Level-Frequency-Weightings.jpg},
+  note = {Accessed on: 2024.09.16.}
+}
+
+
 ----------------------------------------------------------------------------
 https://broadmax.hu/wp-content/uploads/2016/10/three-pillars-audio-networking-whitepaper-audinate.pdf
 https://broadmax.hu/wp-content/uploads/2016/10/rise-of-audio-networking-audinate-wp.pdf
