--- a/thesis.tex
+++ b/thesis.tex
@@ -12,6 +12,7 @@
 \usepackage{url}
 \usepackage{graphicx}
 \usepackage{comment}
+\usepackage[magyar]{babel}
 %--------------------------------------------------------------------------------------
 \newcommand{\szerzoVezeteknev}{Székely}
 \newcommand{\szerzoKeresztnev}{Dániel}
@@ -104,7 +105,7 @@ tervezése, építése, optimalizálása, beüzemelése} % Cím
 % Irodalomjegyzék
 %~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 \addcontentsline{toc}{chapter}{\bibname}
-\bibliography{bib/mybib}
+\bibliography{bib/references}
 
 
 % Függelékek
