--- a/thesis.tex
+++ b/thesis.tex
@@ -13,6 +13,7 @@
 \usepackage{graphicx}
 \usepackage{comment}
 \usepackage[magyar]{babel}
+\usepackage{amsmath}
 %--------------------------------------------------------------------------------------
 \newcommand{\szerzoVezeteknev}{Székely}
 \newcommand{\szerzoKeresztnev}{Dániel}
@@ -110,7 +111,7 @@ tervezése, építése, optimalizálása, beüzemelése} % Cím
 
 % Függelékek
 %~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-\include{content/appendices}
+%\include{content/appendices}
 
 %\label{page:last}
 \end{document}
