feat(thesis): fix page numbering

--- a/thesis.tex
+++ b/thesis.tex
@@ -63,7 +63,7 @@ tervezése, építése, optimalizálása, beüzemelése} % Cím
 %~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 \include{include/titlepage}
 
-%TODO Feladatkiíró lap helye, csak a nyomtatott verzijóba kerül az eredeti példány
+%TODO Feladatkiíró lap helye, csak a nyomtatott verzióba kerül az eredeti példány
 %~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 \include{include/project}
 
@@ -78,7 +78,9 @@ tervezése, építése, optimalizálása, beüzemelése} % Cím
 
 % A dolgozat lényegi része
 %~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+\newpage
 \pagenumbering{arabic}
+\setcounter{page}{1}
 
 % Saját munka
 \include{content/introduction}
